--- a/theme.css
+++ b/theme.css
@@ -8,11 +8,11 @@
 
 /* TOP SECTION BACKGROUND COLOR */
 .released-info {
-  background-color: #ee5866 !important; /* change color */
+  background-color: #ddae7e !important; /* change color */
 }
 .odometer.odometer-auto-theme .odometer-digit,
 .odometer.odometer-theme-train-station .odometer-digit {
-  color: #ee5866 !important; /* this color must be the same as above */
+  color: #ddae7e !important; /* this color must be the same as above */
 }
 /* ----------------------------------------- */
 
@@ -28,7 +28,7 @@
 /* BOTTOM SECTION BACKGROUND COLOR */
 .posts-section,
 .btn-primary {
-  background-color: #00aeef !important; /* change color */
+  background-color: #426a5a !important; /* change color */
 }
 /* ----------------------------------------- */
 
